# Digital-brain-knowledge-factory

./: .gitignore  AGENTS.md  CLAUDE.md  skills-lock.json  Журнал знаний.md  Запросы и обращение к АИ.txt  карта_бз.md
knowledge-factory/: .env.example  .gitignore  README.md  kf.py  pyproject.toml
knowledge-factory/kf/: api.py  cli.py  config.py  deletion_sync.py  embedding_models.py  embedding_state.py  embedding_sync.py  embeddings.py  extract.py  graph.py  ingest.py  journal.py  mcp_server.py  ocr.py  scope.py  synthesize.py  transcribe.py  video.py  vision_caption.py  web_extract.py
knowledge-factory/tests/: test_api.py  test_chunking.py  test_cli.py  test_config.py  test_deletion_sync.py  test_graph.py  (+19 more)
project-config/: АГЕНТЫ-ЛОГ.md  РЕШЕНИЯ-И-СТАТУС.md
Разработкаи Обращение к АИ/: Запросы и обращение к АИ.txt  Запросы к АИ ... Выжимка по урокам.txt
Структура хранилища/: README.md  Навигация.md
Фабрика знаний (Цифровой мозг)/: README.md  docker-compose.yml  pyproject.toml
Файлы настройки проекта/: ПАМЯТЬ-СЕССИИ-ПЕРЕНОС.md  РЕШЕНИЯ-И-СТАТУС.md
Цифровой мозг (digital-brain)/: .env.example  README.md  docker-compose.yml  pyproject.toml
Цифровой мозг (digital-brain)/kf/: cli.py  config.py  extract.py  ingest.py  mcp_server.py  scope.py  transcribe.py  video.py
Цифровой мозг (digital-brain)/kf/store/: postgres.py
Цифровой мозг (digital-brain)/tests/: test_cli.py  test_config.py  test_extract.py  test_hashing.py  test_ingest.py  test_mcp_server.py  test_minio_store.py  test_ocr.py  test_postgres_store.py  test_scope.py  test_transcribe.py  test_video.py
(+66 files in other folders)
