[project]
name = "kf"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
    "minio>=7.2.20",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.14.2",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
]

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
